--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "sass": "sass src/assets/styles/sass/index.scss src/assets/styles/css/index.css --watch",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -13,7 +14,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "sass": "^1.59.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
